# ChangeLog for dev-python/pycairo
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pycairo/ChangeLog,v 1.71 2009/08/29 01:13:12 arfrever Exp $

*pycairo-1.8.8 (29 Aug 2009)

  29 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +pycairo-1.8.8.ebuild:
  Version bump.

  08 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pycairo-1.8.6.ebuild:
  Set SUPPORT_PYTHON_ABIS.

  10 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pycairo-1.8.6.ebuild:
  Add "doc" USE flag (bug #276805).

*pycairo-1.8.6 (09 Jul 2009)

  09 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +pycairo-1.8.6.ebuild:
  Version bump.

  01 May 2009; Raúl Porcel <armin76@gentoo.org> pycairo-1.8.2.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #267433

  29 Apr 2009; Brent Baude <ranger@gentoo.org> pycairo-1.8.2.ebuild:
  stable ppc64, bug 267433

  28 Apr 2009; Jeroen Roovers <jer@gentoo.org> pycairo-1.8.2.ebuild:
  Stable for HPPA (bug #267433).

  27 Apr 2009; Markus Meier <maekke@gentoo.org> pycairo-1.8.2.ebuild:
  amd64/x86 stable, bug #267433

  26 Apr 2009; Brent Baude <ranger@gentoo.org> pycairo-1.8.2.ebuild:
  stable ppc, bug 267433

*pycairo-1.8.4 (25 Apr 2009)

  25 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -files/pycairo-1.2.2-no-automagic-deps.patch,
  -files/pycairo-1.2.6-no-automagic-deps.patch, -pycairo-1.2.2.ebuild,
  -pycairo-1.2.6.ebuild, -pycairo-1.4.0.ebuild, pycairo-1.8.2,
  +pycairo-1.8.4.ebuild:
  Version bump.

*pycairo-1.8.2 (24 Jan 2009)

  24 Jan 2009; Patrick Lauer <patrick@gentoo.org> +pycairo-1.8.2.ebuild:
  Bump to 1.8.2, fixes #255360

  10 Nov 2008; Raúl Porcel <armin76@gentoo.org> pycairo-1.4.12.ebuild:
  arm/sh stable

  06 Aug 2008; Jesus Rivero <neurogeek@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc
