@@ -7,6 +7,6 @@ EBUILD pycairo-1.4.12.ebuild 1198 RMD160 6ef334a0ac25e25fd380461a0837e684caaab9f
 EBUILD pycairo-1.8.2.ebuild 1196 RMD160 b351a0aae0a590e2986052715366c5b1ac996ccd SHA1 ae3a62f953928835da323f6d1ad02a5585c7486e SHA256 56ac7ad0c9c7ee6217d76cd0f0326c6401f80db97d6e221510c24cc6ca59bc20
 EBUILD pycairo-1.8.4.ebuild 1202 RMD160 c6cdc87d82d37f84634a1f43c766d1b721712782 SHA1 8178f3cc26a351b4adfb4728250f51d568b0cd38 SHA256 9a0a3da717772eaefe99a95721d20ec67f970e8ef824694408ffad6761248a6d
 EBUILD pycairo-1.8.6.ebuild 1620 RMD160 171695af29933a7f21734db1284fe43000eba0e6 SHA1 4ebcf5a57d36730ba1803d4707fd6d1d9f50a335 SHA256 a60643f5afcc1bb4ebc16a97071605fa5e2fbe364a00ca299a17875158c7df19
-EBUILD pycairo-1.8.8.ebuild 1925 RMD160 c37280012e9352343503d5f7e9a611470a064694 SHA1 3abba99068f6d5fa2608c1ca255cf71ba77b813c SHA256 d74161a258fcf41e4d2b9dfc227611dc699d85dcdb73fcdd3a26a0327c6b088c
-MISC ChangeLog 9178 RMD160 c2cfed884a08e2c3607b0593609e0c0774ca4aec SHA1 3c9f07e22cc6d818d663257f2e0cd86d81643c16 SHA256 7a8b03405f66402342e072ffe2a3e4774c680ff4039cbdde74411fdb0f9ae6f1
+EBUILD pycairo-1.8.8.ebuild 1936 RMD160 55e20f633c47ea52d8dec4e0d73ce76676a9f405 SHA1 4fe84826ddea7acc03b6e3e357f9e9c6b6c81c8d SHA256 3344052cebbaca50d963a6f4b9d2eb8a873aa6448d44ab98199420f42ce78460
+MISC ChangeLog 9312 RMD160 21bedf35d1d0113b1c812a5525f376bc66e2be6d SHA1 e4350511c3ed58989f63f8d837ddaa9cac0e8443 SHA256 ee4e4326bf23a492ed8980013ac6b4615c067ffbd1a04e66735234f95d7ab1ed
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
